Last minute DNA HMI HomeScreen Fixes
Fixes issues with homescreen HMI showing icons for "DNA Browser" and "GestureGame".
Fixes issues with App Grid
Fixes bottom bar being clipped in some apps
Fixes issue with Dashboard having an IP address

--- a/DNA_common/css/common.css
+++ b/DNA_common/css/common.css
@@ -66,6 +66,7 @@ body {
 	font-family: SourceSansPro, sans-serif;
 	width: 100%;
 	height: 100%;
+	min-height:1920px;
   margin: 0;
   padding: 0;
 	background-color: rgb(0,0,0);
